added a lot of utility classes and configured security